--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.8.4"
+    "mongoose": "^6.8.4",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20"
   }
