--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "MallamTY",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4",
     "morgan": "^1.10.0",
     "validator": "^13.7.0"
